# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2024

# Changelog:
#
# Updated: 11 JUL 2024
# - Make helper-build-regina.sh aware of Macports
#
# Updated: 09 JUL 2024
# - Add Android detection and allow the script to run (not yet supported)
#
# Updated: 11 JUN 2024
# - Added support for Apple macOS 15 Sequoia (Beta)
#
# Updated: 04 JUN 2024
# - Correct bitness test for FreeBSD 64-bit on Raspberry Pi
#   Thanks to Aike (Asmid2002) for this improvement
# - Correct Regina configure for FreeBSD and 64-bit on Pi
# - Correct Reinga related typos in FreeBSD special config file
#
# Updated: 05 MAY 2024
# - Add support for Amazon Linux (thanks to Gregory Rudolph)
#
# Updated: 25 APR 2024
# - Display "-unknown-" for script version if not from a git repo
# - Fix problem scp-ing to system that auto sets Hercules environment
#   "scp: Ensure the remote shell produces no output for non-interactive ..."
#
# Updated: 24 APR 2024
# - Fix so --detect-only can be used alone
# - Fix so --detect-only can be used alone
#
# Updated: 19 APR 2024
# - Remove backslashed quotes from help output
#
# Updated: 16 APR 2024
# - Allow new OS/Builds via opt_prompts/--prompts [Rudi]
#   When system detection fails, or system is known to not
#   be supported, prompt and allow processing to coninue.
#
# Updated: 16 APR 2024
# - on macOS, use external helper script to build Regina
#   Because of recent macOS Xcode-Tools and Clang not being too happy
#   with the Regina 3.6 we had been building, we check for macOS
#   and call the external build helper instead of doing it all by hand.
#
# Updated: 13 APR 2024
# - Don't try to add LD_LIBRARY_PATH if it's not present
#
# Updated: 11 APR 2024
# - on macOS, tack LD_LIBRARY_PATH onto DYLD_LIBRARY_PATH
#   This is because macOS for security reasons doesn't pass
#   the shell's DYLD_LIBRARY_PATH into the next level shell.
#
# Updated: 02 APR 2024
# - Fix macOS version detection issue that crept in a while back